--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
     <!-- Theme Color -->
     <meta name="theme-color" content="#020617" />
 
+    <!-- Preconnect to CDNs for faster connections -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://unpkg.com" />
+
     <!-- Fonts - use display: swap via API parameter -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
